Tried to Fix Image Bleed in Grid & Failed

--- a/styles.css
+++ b/styles.css
@@ -54,12 +54,18 @@ padding: 7px;
 word-wrap: normal;
 justify-content: right;}
 
-.grid-container {display: grid;
+.grid {display: grid;
 gap: 1rem;
 grid-template-columns:  repeat(3, 520px);
 grid-template-rows: repeat(4, 340px);
 justify-content: center;
+padding-top: 15px;
+padding-bottom: 15px;
 }
+
+.grid_img {width: 100%;
+height: 100%;
+object-fit: cover;}
 
 .item1 {grid-row: 1/1;
 grid-column: 1/1;}
@@ -70,20 +76,20 @@ grid-column: 1/1;}
 .item3 {grid-row: 3/4;
 grid-column: 1/1;}
 
-.item4 {grid-row: 1/2;
-grid-column: 2/3;}
+.item4 {grid-row: 1/3;
+grid-column: 2/2;}
 
 .item5 {grid-row: 3/3;
 grid-column: 2/2;
 align-self: center;}
 
 .item6 {grid-row: 4/4;
-grid-column: 2/3;}
+grid-column: 2/4;}
 
 .item7 {grid-row: 1/1;
 grid-column: 3/3;}
 
-.item8 {grid-row: 2/3;
+.item8 {grid-row: 2/4;
 grid-column: 3/3;}
 
 .grid-text {
